--- a/index2.html
+++ b/index2.html
@@ -14,8 +14,6 @@
     <input type="submit">
 </form>
 
-<a href="http://codingblocks.com" target="_top">codignblocks in first page</a>
-
-
+<a href="http://codingblocks.com" target="_parent">codignblocks in first page</a>
 </body>
 </html>
